# Eco-Lens

./: .gitignore  README.md  VERCEL_DEPLOYMENT.md  e -i --root  env.example  pyproject.toml  requirements.txt  run.py  setup.py  start.bat  vercel.json
api/: index.py
public/: index.html
src/ecolens/: __init__.py  main.py
src/ecolens/static/: index.html
