[project]
name = "ecolens"
version = "1.0.0"
description = "AI-powered Sustainability Lifecycle Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=2.0.0",
    "lxml>=4.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecolens"]

[project.scripts]
ecolens = "ecolens.main:app"
